--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body{
-	width:95%;
-	height:95%;
+	width:100%;
+	height:100%;
 	background-color:lightgrey;
 }
 .lightyellow{
@@ -9,6 +9,7 @@ body{
 	min-height: 30%;
 	display:inline-block;
 	font-size:30px;
+	font-family:font-family: 'Felipa', cursive;
 }
 .greenish{
 	background-color:#A07B1A;
@@ -16,6 +17,7 @@ body{
 	min-height: 30%;
 	display:inline-block;
 	font-size:30px;
+	
 }
 .brown{
 	background-color:#5A3112;
@@ -37,6 +39,7 @@ body{
 	height: 70%;
 	display:inline-block;
 	font-size:30px;
+	color:white;
 }
 p{
 	padding-top:80px;
