--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,43 +3,48 @@ body{
 	height:100%;
 	background-color:lightgrey;
 }
+@media only screen and (min-width:250px){
 .lightyellow{
 	background-color:#EAAB36;
 	width: 50%;
 	min-height: 30%;
 	display:inline-block;
 	font-size:30px;
-	font-family:font-family: 'Felipa', cursive;
+	font-family:font-family: 'Felipa', cursive;}
 }
+	@media only screen and (min-width:550px){
 .greenish{
 	background-color:#A07B1A;
 	width: 30%;
 	min-height: 30%;
 	display:inline-block;
-	font-size:30px;
+	font-size:30px;}
 	
 }
+@media only screen and (min-width:750px){
 .brown{
 	background-color:#5A3112;
 	width: 18.8%;
 	min-height: 30%;
 	display:inline-block;
-	font-size:30px;
+	font-size:30px;}
 }
+@media only screen and (min-width:1000px){	
 .white{
 	background-color:#ffffff;
 	width: 50%;
 	height: 70%;
 	display:inline-block;
-	font-size:30px;
+	font-size:30px;}
 }
+@media only screen and (min-width:1250px){
 .black{
 	background-color:#000000;
 	width: 49%;
 	height: 70%;
 	display:inline-block;
 	font-size:30px;
-	color:white;
+	color:white;}
 }
 p{
 	padding-top:80px;
