--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body{
 	background-color:#EAAB36;
 	width: 50%;
 	min-height: 30%;
-	display:inline-block;
+	display:flex;
 	font-size:30px;
 	font-family:font-family: 'Felipa', cursive;}
 }
@@ -17,7 +17,7 @@ body{
 	background-color:#A07B1A;
 	width: 30%;
 	min-height: 30%;
-	display:inline-block;
+	display:flex;
 	font-size:30px;}
 	
 }
@@ -26,7 +26,7 @@ body{
 	background-color:#5A3112;
 	width: 18.8%;
 	min-height: 30%;
-	display:inline-block;
+	display:flex;
 	font-size:30px;}
 }
 @media only screen and (min-width:1000px){	
@@ -34,7 +34,7 @@ body{
 	background-color:#ffffff;
 	width: 50%;
 	height: 70%;
-	display:inline-block;
+	display:flex;
 	font-size:30px;}
 }
 @media only screen and (min-width:1250px){
@@ -42,7 +42,7 @@ body{
 	background-color:#000000;
 	width: 49%;
 	height: 70%;
-	display:inline-block;
+	display:flex;
 	font-size:30px;
 	color:white;}
 }
