--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,54 +1,46 @@
 body{
-	width:100%;
-	height:100%;
+	width:95vw;
+	height:95vh;
 	background-color:lightgrey;
 }
-@media only screen and (min-width:250px){
 .lightyellow{
 	background-color:#EAAB36;
 	width: 50%;
 	min-height: 30%;
-	display:flex;
+	display:inline-block;
 	font-size:30px;
-	font-family:font-family: 'Felipa', cursive;}
-}
-	@media only screen and (min-width:500px){
+	font-family:font-family: 'Felipa', cursive;
+	float:left;}
 .greenish{
 	background-color:#A07B1A;
 	width: 30%;
 	min-height: 30%;
-	display:flex;
+	display:inline-block;
 	font-size:30px;}
-	
-}
-@media only screen and (min-width:750px){
 .brown{
 	background-color:#5A3112;
-	width: 18.8%;
+	width: 20%;
 	min-height: 30%;
-	display:flex;
-	font-size:30px;}
-}
-@media only screen and (min-width:1000px){	
+	display:inline-block;
+	font-size:30px;
+	float:right;}	
 .white{
 	background-color:#ffffff;
 	width: 50%;
 	height: 70%;
-	display:flex;
-	font-size:30px;}
-}
-@media only screen and (min-width:1250px){
+	display:inline-block;
+	font-size:30px;
+	float:left;}
+
 .black{
 	background-color:#000000;
-	width: 49%;
+	width: 50%;
 	height: 70%;
-	display:flex;
+	display:inline-block;
 	font-size:30px;
-	color:white;}
-}
+	color:white;
+	float:right;}
+
 p{
 	padding-top:80px;
-}
-body{
-	background-color:lightgrey;
 }
